--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,27 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+/.idea/
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+*.cbp
+cmake-build-debug/*
+
+# Prerequisites
+*.iml
+*.idea
+.code
+target
+target/*
+cmake-build-debug
